touhces on scribe
